更新至卷85節2
Former-commit-id: a5a28a49ae5b266b052654565d6ebe9886f95385

--- a/2_世系圖表/2.2_并立政權/晉/十六國/成漢世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/成漢世系圖表.html
@@ -270,7 +270,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <tr>
 <th>&#x5E8F;&#x865F;</th>
 <th>&#x7D22;&#x5F15;&#x865F;</th>
-<th>&#x59D3;&#x540D;</th>
+<th>&#x570B;&#x541B;&#x59D3;&#x540D;</th>
 <th>&#x5F97;&#x4F4D;&#x5E74;</th>
 <th>&#x5931;&#x4F4D;&#x5E74;</th>
 <th>&#x5099;&#x8A3B;</th>
@@ -278,12 +278,20 @@ pre[data-line] .line-highlight[data-end]:after {
 </thead>
 <tbody>
 <tr>
-<td>0</td>
+<td>-2</td>
 <td></td>
 <td>&#x674E;&#x7279;</td>
-<td></td>
-<td></td>
+<td>302</td>
+<td>303</td>
 <td>&#x5960;&#x57FA;&#x8005;</td>
+</tr>
+<tr>
+<td>-1</td>
+<td></td>
+<td>&#x674E;&#x6D41;</td>
+<td>303</td>
+<td>303</td>
+<td>&#x63A5;&#x73ED;&#x5960;&#x57FA;&#x8005;</td>
 </tr>
 <tr>
 <td>1</td>
@@ -291,7 +299,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>&#x674E;&#x96C4;</td>
 <td>303</td>
 <td>334</td>
-<td>&#x5B9A;&#x570B;&#x865F;&#x70BA;&#x6210;</td>
+<td>&#x958B;&#x570B;&#xFF0C;&#x5B9A;&#x570B;&#x865F;&#x70BA;&#x6210;</td>
 </tr>
 <tr>
 <td>2</td>
@@ -350,7 +358,7 @@ classDef king fill:#ffee00
 class &#x674E;&#x96C4;,&#x674E;&#x73ED;,&#x674E;&#x671F;,&#x674E;&#x58FD;,&#x674E;&#x52E2; king
 
 classDef founder fill:#ffffee
-class &#x674E;&#x7279; founder
+class &#x674E;&#x7279;,&#x674E;&#x6D41; founder
 </div>
       </div>
       
