--- a/5_筆記/资治通鉴84.html
+++ b/5_筆記/资治通鉴84.html
@@ -308,11 +308,14 @@ pre[data-line] .line-highlight[data-end]:after {
 <blockquote>
 <p>&#x518F;&#x8F9F;&#x65B0;&#x8208;&#x5289;&#x6BB7;&#x70BA;&#x8ECD;&#x8AEE;&#x796D;&#x9152;-&gt;&#x93AE;&#x4E0B;&#x90B3;</p>
 </blockquote>
-<h2 class="mume-header" id="70607-%E9%80%BC%E5%8F%8D%E6%B5%81%E6%B0%91%E5%8F%8A%E6%9D%8E%E7%89%B9%E6%93%9A%E8%9C%80">70607 &#x903C;&#x53CD;&#x6D41;&#x6C11;&#x53CA;&#x674E;&#x7279;&#x64DA;&#x8700;</h2>
+<h2 class="mume-header" id="70607-%E6%B5%81%E6%B0%91%E8%B5%B7%E7%BE%A9%E5%8F%8A%E6%9D%8E%E7%89%B9%E6%93%9A%E8%9C%80">70607 &#x6D41;&#x6C11;&#x8D77;&#x7FA9;&#x53CA;&#x674E;&#x7279;&#x64DA;&#x8700;</h2>
 
 <blockquote>
 <p>&#x521D;&#xFF0C;&#x671D;&#x5EF7;&#x7B26;&#x4E0B;&#x79E6;&#x3001;&#x96CD;&#x5DDE;-&gt;&#x6C42;&#x6551;&#x4E8E;&#x6881;&#x5DDE;&#x53CA;&#x5357;&#x5937;&#x6821;&#x5C09;</p>
 </blockquote>
+<ul>
+<li>&#x95BB;&#x5F0F;&#xFF1A;&#x5F31;&#x800C;&#x4E0D;&#x53EF;&#x8F7B;&#x8005;&#x6C11;&#x4E5F;&#xFF0C;&#x4ECA;&#x8DA3;&#x4E4B;&#x4E0D;&#x4EE5;&#x7406;&#xFF0C;&#x4F17;&#x6012;&#x96BE;&#x72AF;&#xFF0C;&#x6050;&#x4E3A;&#x7978;&#x4E0D;&#x6D45;&#x3002;</li>
+</ul>
 <h2 class="mume-header" id="70608-%E6%9D%8E%E7%89%B9%E7%9B%8A%E7%9B%9B">70608 &#x674E;&#x7279;&#x76CA;&#x76DB;</h2>
 
 <blockquote>
@@ -328,6 +331,9 @@ pre[data-line] .line-highlight[data-end]:after {
 <blockquote>
 <p>&#x518F;&#x4EE5;&#x6CB3;&#x95F4;&#x738B;&#x9899;&#x672C;&#x9644;&#x8D75;&#x738B;&#x4F26;-&gt;&#x8986;&#x8BAF;&#x6E05;&#x5141;</p>
 </blockquote>
+<ul>
+<li>&#x516B;&#x738B;&#x4E4B;&#x4E82;&#x6700;&#x4E82;&#x526A;&#x5F71;&#xFF1A;&#x518F;&#x4F7F;&#x4EBA;&#x6267;&#x9A7A;&#x865E;&#x5E61;&#x5531;&#x4E91;&#xFF1A;&#x201C;&#x957F;&#x6C99;&#x738B;&#x77EB;&#x8BCF;&#x3002;&#x201D;&#x4E42;&#x53C8;&#x79F0;&#x201C;&#x5927;&#x53F8;&#x9A6C;&#x8C0B;&#x53CD;&#x201D;&#x3002;&#x662F;&#x5915;&#xFF0C;&#x57CE;&#x5185;&#x5927;&#x6218;&#xFF0C;&#x98DE;&#x77E2;&#x96E8;&#x96C6;&#xFF0C;&#x706B;&#x5149;&#x5C5E;&#x5929;&#x3002;&#x5E1D;&#x5E78;&#x4E0A;&#x4E1C;&#x95E8;&#xFF0C;&#x77E2;&#x96C6;&#x5FA1;&#x524D;&#xFF0C;&#x7FA4;&#x81E3;&#x6B7B;&#x8005;&#x76F8;&#x6795;&#x3002;</li>
+</ul>
 
       </div>
       
