--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -304,7 +304,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x820D;&#x8EAB;&#x70BA;&#x6C11;&#xFF1A;&#x9B4F;&#x548E;&#x3001;&#x5289;&#x748B;</li>
 <li>&#x5634;&#x8CE4;&#xFF1A;&#x97D3;&#x751F;&#x3001;&#x6817;&#x59EC;&#x3001;&#x5F4C;&#x8861;&#x3001;&#x694A;&#x4FEE;&#x3001;&#x9B4F;&#x660E;&#x5E1D;&#x865E;&#x5983;</li>
 <li>&#x7AD9;&#x932F;&#x968A;&#x7684;&#x667A;&#x8005;&#xFF1A;&#x674E;&#x5DE6;&#x8ECA;&#x3001;&#x9F8D;&#x4E14;&#x5BA2;&#x3001;&#x4F0D;&#x88AB;&#x3001;&#x71D5;&#x738B;&#x65E6;&#x76F8;&#x5E73;&#x3001;&#x56B4;&#x5C24;&#x3001;&#x7530;&#x8C50;&#x3001;&#x6CAE;&#x6388;&#x3001;&#x912D;&#x5EA6;&#x3001;&#x66F9;&#x723D;&#x53C3;&#x8ECD;&#x694A;&#x5049;&#x3001;&#x6853;&#x7BC4;</li>
-<li>&#x9577;&#x58FD;&#xFF1A;&#x8D99;&#x4F57;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4F0F;&#x751F;&#x3001;&#x8A31;&#x656C;&#x3001;&#x58EB;&#x71EE;&#x3001;&#x5F35;&#x81F6;&#x3001;&#x5442;&#x5CB1;&#x3001;&#x4F86;&#x654F;&#x3001;&#x62D3;&#x8DCB;&#x529B;&#x5FAE;</li>
+<li>&#x9577;&#x58FD;&#xFF1A;&#x8D99;&#x4F57;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4F0F;&#x751F;&#x3001;&#x8A31;&#x656C;&#x3001;&#x58EB;&#x71EE;&#x3001;&#x5F35;&#x81F6;&#x3001;&#x5442;&#x5CB1;&#x3001;&#x4F86;&#x654F;&#x3001;&#x62D3;&#x8DCB;&#x529B;&#x5FAE;&#x3001;&#x8303;&#x9577;&#x751F;</li>
 <li>&#x82E6;&#x903C;&#x4E00;&#x751F;&#xFF1A;&#x9148;&#x5BC4;&#x3001;&#x7533;&#x5C60;&#x5609;&#x3001;&#x5B5D;&#x7766;&#x7687;&#x540E;&#x3001;&#x99AE;&#x884D;&#x3001;&#x5442;&#x5B89;</li>
 <li>&#x4E8C;&#x5A5A;&#x7687;&#x540E;&#xFF1A;&#x8584;&#x59EC;&#x3001;&#x5B5D;&#x666F;&#x738B;&#x7687;&#x540E;&#x3001;&#x7504;&#x592B;&#x4EBA;&#x3001;&#x8700;&#x6F22;&#x5433;&#x7687;&#x540E;&#x3001;&#x7F8A;&#x737B;&#x5BB9;</li>
 <li>&#x919C;&#xFF1A;&#x695A;&#x7A46;&#x738B;&#x3001;&#x5B5F;&#x5617;&#x541B;&#x3001;&#x8521;&#x6FA4;&#x3001;&#x7530;&#x86A1;&#x3001;&#x5468;&#x8209;&#x3001;&#x5468;&#x71EE;&#x3001;&#x6881;&#x80E4;&#x3001;&#x7BA1;&#x8F05;</li>
@@ -351,6 +351,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x4EC1;&#x7FA9;&#x4E4B;&#x5E2B;&#xFF1A;&#x8D99;&#x5145;&#x570B;&#x3001;&#x6F22;&#x5149;&#x6B66;&#x5E1D;</li>
 <li>&#x5947;&#x8469;&#x7235;&#x4F4D;&#xFF1A;&#x7FB9;&#x9821;&#x4FAF;&#x5289;&#x4FE1;&#x3001;&#x4E0D;&#x7FA9;&#x4FAF;&#x5B50;&#x5BC6;</li>
 <li>&#x5973;&#x53CD;&#x8CCA;&#xFF1A;&#x5442;&#x6BCD;&#x3001;&#x9072;&#x662D;&#x5E73;&#x3001;&#x5FB5;&#x5074;&#x3001;&#x5FB5;&#x8CB3;&#x3001;&#x9673;&#x78A9;&#x771F;</li>
+<li>&#x5973;&#x6230;&#x58EB;&#xFF1A;&#x7F85;&#x7687;&#x592A;&#x540E;</li>
 <li>&#x5973;&#x667A;&#x8B00;&#x5BB6;&#xFF1A;&#x8F9B;&#x61B2;&#x82F1;&#x3001;&#x7FD2;&#x82F1;&#x7FD2;</li>
 <li>&#x8A93;&#x4E0D;&#x6539;&#x5AC1;&#xFF1A;&#x590F;&#x4FAF;&#x4EE4;&#x5973;</li>
 <li>&#x5973;&#x6B0A;&#x4E3B;&#x7FA9;&#x8005;&#x2236;&#x7A0B;&#x54B8;</li>
