更新至卷85節6
Former-commit-id: 2efafe899b09a14c5df82fb998d6f53ef1eb5781

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -297,6 +297,8 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x9F8D;&#x967D;&#x541B;&#x4E3B;&#xFF1A;&#x885B;&#x9748;&#x516C;&#x3001;&#x9B4F;&#x5B89;&#x91D0;&#x738B;&#x3001;&#x5289;&#x90A6;&#x3001;&#x6F22;&#x60E0;&#x5E1D;&#x3001;&#x6F22;&#x6587;&#x5E1D;&#x3001;&#x6F22;&#x666F;&#x5E1D;&#x3001;&#x6F22;&#x6B66;&#x5E1D;&#x3001;&#x6F22;&#x6210;&#x5E1D;&#x3001;&#x6F22;&#x54C0;&#x5E1D;&#x3001;&#x66F9;&#x53E1;</li>
 <li>&#x53E3;&#x5403;&#xFF1A;&#x97D3;&#x975E;&#x3001;&#x5468;&#x660C;&#x3001;&#x53F8;&#x99AC;&#x76F8;&#x5982;&#x3001;&#x9127;&#x827E;&#x3001;&#x66F9;&#x53E1;</li>
 <li>&#x72D0;&#x81ED;&#xFF1A;&#x695A;&#x61F7;&#x738B;</li>
+<li>&#x6D88;&#x6E34;(&#x7CD6;&#x5C3F;&#x75C5;)&#xFF1A;&#x53F8;&#x99AC;&#x76F8;&#x5982;</li>
+<li>&#x7FB8;&#x7635;(&#x80BA;&#x7D50;&#x6838;)&#xFF1A;&#x8CC0;&#x5FAA;</li>
 <li>&#x58C1;&#x4E2D;&#x85CF;&#x66F8;&#xFF1A;&#x5B54;&#x9B92;&#x3001;&#x4F0F;&#x751F;&#x3001;&#x9673;&#x5BF5;&#x66FE;&#x7956;&#x9673;&#x54B8;</li>
 <li>&#x58C1;&#x4E2D;&#x85CF;&#x4EBA;&#xFF1A;&#x6881;&#x4F2F;&#x7389;&#x3001;&#x8D99;&#x6B67;&#x3001;&#x8881;&#x958E;&#x3001;&#x4F0F;&#x7687;&#x540E;</li>
 <li>&#x76F8;&#x9762;&#x5927;&#x5E2B;&#xFF1A;&#x5442;&#x516C;&#x3001;&#x5289;&#x90A6;&#x3001;&#x8A31;&#x8CA0;&#x3001;&#x5510;&#x8209;&#x3001;&#x6731;&#x5EFA;&#x5E73;&#x3001;&#x7BA1;&#x8F05;</li>
