更新至卷85節10
Former-commit-id: d099618c2e2fae1c32b6d581a4deed3a1b23aff7

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -281,6 +281,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x5614;&#x8840;&#x6B7B;&#xFF1A;&#x5468;&#x4E9E;&#x592B;&#x3001;&#x738B;&#x5609;&#x3001;&#x796D;&#x809C;&#x3001;&#x99AC;&#x65E5;&#x78FE;&#x3001;&#x8881;&#x8853;&#x3001;&#x8881;&#x7D39;&#x3001;&#x53F8;&#x99AC;&#x6538;</li>
 <li>&#x75BD;&#x767C;&#x80CC;&#x6B7B;&#xFF1A;&#x8303;&#x589E;&#x3001;&#x5289;&#x7109;&#x3001;&#x66F9;&#x4F11;</li>
 <li>&#x81EA;&#x711A;&#xFF1A;&#x9B4F;&#x548E;&#x3001;&#x6D89;&#x9593;&#x3001;&#x5B5D;&#x5E73;&#x738B;&#x7687;&#x540E;</li>
+<li>&#x71D2;&#x6B7B;&#xFF1A;&#x53F8;&#x99AC;&#x4E42;</li>
 <li>&#x8D74;&#x6230;&#x9663;&#x6B89;&#x96E3;&#xFF1A;&#x95DC;&#x9756;&#x3001;&#x4E8E;&#x8A6E;&#x3001;&#x8AF8;&#x845B;&#x5C1A;</li>
 <li>&#x8DF3;&#x6A13;&#xFF1A;&#x63DA;&#x96C4;&#x3001;&#x7DD1;&#x73E0;</li>
 <li>&#x667A;&#x8B00;&#x5C0F;&#x4EBA;&#x7269;&#xFF1A;&#x8CAB;&#x73E0;&#x8005;&#x3001;&#x8D99;&#x990A;&#x5352;&#x3001;&#x5BA3;&#x66F2;&#x4EFB;&#x6C0F;&#x3001;&#x864E;&#x5708;&#x55C7;&#x592B;&#x3001;&#x5468;&#x4E18;</li>
@@ -370,7 +371,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x6975;&#x9650;&#x9003;&#x751F;&#xFF1A;&#x8D99;&#x6B66;&#x3001;&#x8607;&#x6B66;&#x3001;&#x675C;&#x6839;&#x3001;&#x7B2C;&#x4E94;&#x7A2E;&#x3001;&#x674E;&#x71EE;&#x3001;&#x8D99;&#x5C90;&#x3001;&#x5F35;&#x5109;</li>
 <li>&#x8650;&#x5F92;&#x4E8B;&#x4EF6;&#xFF1A;&#x9EC3;&#x77F3;&#x516C;+&#x5F35;&#x826F;&#x3001;&#x90ED;&#x6CF0;+&#x9B4F;&#x662D;</li>
 <li>&#x6613;&#x8207;&#x8033;&#xFF1A;&#x5287;&#x8F9B;+&#x9F90;&#x7156;&#x3001;&#x9F8D;&#x4E14;+&#x97D3;&#x4FE1;&#x3001;&#x674E;&#x5EE3;+&#x80E1;&#x865C;&#x3001;&#x590F;&#x4FAF;&#x6DF5;+&#x97D3;&#x9042;</li>
-<li>&#x76F8;&#x611B;&#x76F8;&#x6BBA;&#xFF1A;&#x5F35;&#x8033;+&#x9673;&#x9918;&#x3001;&#x5B6B;&#x6B0A;+&#x5F35;&#x662D;</li>
+<li>&#x76F8;&#x611B;&#x76F8;&#x6BBA;&#xFF1A;&#x5F35;&#x8033;+&#x9673;&#x9918;&#x3001;&#x5B6B;&#x6B0A;+&#x5F35;&#x662D;&#x3001;&#x53F8;&#x99AC;&#x9852;+&#x5289;&#x6C88;</li>
 <li>&#x81EA;&#x7BC9;&#x5C0F;&#x5C4B;&#xFF1A;&#x8881;&#x958E;&#x3001;&#x7533;&#x5C60;&#x87E0;</li>
 <li>&#x5546;&#x754C;&#x7CBE;&#x82F1;&#xFF1A;&#x5442;&#x4E0D;&#x97CB;&#x3001;&#x5B5F;&#x4F57;</li>
 <li>&#x88AB;&#x59E6;&#x5C38;&#xFF1A;&#x5442;&#x540E;&#x3001;&#x6F22;&#x6853;&#x5E1D;&#x99AE;&#x8CB4;&#x4EBA;</li>
