更新至卷86節8，完成八王之亂
Former-commit-id: a19d1d562643df7d3fc29bf61863b2540a634565

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -284,6 +284,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x71D2;&#x6B7B;&#xFF1A;&#x53F8;&#x99AC;&#x4E42;</li>
 <li>&#x8D74;&#x6230;&#x9663;&#x6B89;&#x96E3;&#xFF1A;&#x95DC;&#x9756;&#x3001;&#x4E8E;&#x8A6E;&#x3001;&#x8AF8;&#x845B;&#x5C1A;</li>
 <li>&#x8DF3;&#x6A13;&#xFF1A;&#x63DA;&#x96C4;&#x3001;&#x7DD1;&#x73E0;</li>
+<li>&#x98DF;&#x9905;&#x6BD2;&#x6B7B;&#xFF1A;&#x6F22;&#x8CEA;&#x5E1D;&#x3001;&#x6649;&#x60E0;&#x5E1D;</li>
 <li>&#x667A;&#x8B00;&#x5C0F;&#x4EBA;&#x7269;&#xFF1A;&#x8CAB;&#x73E0;&#x8005;&#x3001;&#x8D99;&#x990A;&#x5352;&#x3001;&#x5BA3;&#x66F2;&#x4EFB;&#x6C0F;&#x3001;&#x864E;&#x5708;&#x55C7;&#x592B;&#x3001;&#x5468;&#x4E18;</li>
 <li>&#x667A;&#x6167;&#x7684;&#x7236;&#x6BCD;&#xFF1A;&#x5433;&#x8D77;&#x5352;&#x6BCD;&#x3001;&#x9673;&#x5B30;&#x6BCD;&#x3001;&#x738B;&#x9675;&#x4E4B;&#x6BCD;&#x3001;&#x5F35;&#x6E6F;&#x4E4B;&#x6BCD;&#x3001;&#x738B;&#x5149;&#x6BCD;&#x3001;&#x8303;&#x6EC2;&#x6BCD;&#x3001;&#x8D99;&#x82DE;&#x6BCD;&#x3001;&#x674E;&#x7FA9;&#x3001;&#x738B;&#x7D93;&#x6BCD;&#x3001;&#x6F58;&#x5CB3;&#x6BCD;</li>
 <li>&#x7D55;&#x671B;&#x7684;&#x7236;&#x6BCD;&#xFF1A;&#x8D99;&#x5C07;&#x62EC;&#x6BCD;&#x3001;&#x6641;&#x932F;&#x7236;&#x3001;&#x9673;&#x52DD;&#x59BB;&#x7236;&#x3001;&#x8D99;&#x9577;&#x5E74;&#x3001;&#x56B4;&#x5EF6;&#x5E74;&#x6BCD;&#x3001;&#x5F35;&#x4FF6;&#x7236;</li>
@@ -293,7 +294,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x88AB;&#x5F8C;&#x5ABD;&#x8650;&#xFF1A;&#x7956;&#x5DF1;&#x3001;&#x859B;&#x82DE;&#x3001;&#x8523;&#x8A61;&#x3001;&#x674E;&#x66C7;&#x3001;&#x738B;&#x7965;</li>
 <li>&#x611A;&#x5B5D;&#xFF1A;&#x7956;&#x5DF1;&#x3001;&#x5B6B;&#x6027;</li>
 <li>&#x611A;&#x5FE0;&#xFF1A;&#x738B;&#x7D2F;</li>
-<li>&#x6473;&#x9580;&#xFF1A;&#x6A0A;&#x4F37;&#x3001;&#x66F9;&#x6D2A;</li>
+<li>&#x6473;&#x9580;&#xFF1A;&#x6A0A;&#x4F37;&#x3001;&#x66F9;&#x6D2A;&#x3001;&#x53F8;&#x99AC;&#x9A30;</li>
 <li>&#x7D66;&#x541B;&#x4E3B;&#x737B;&#x5B55;&#x5A66;&#xFF1A;&#x5442;&#x4E0D;&#x97CB;&#x3001;&#x6625;&#x7533;&#x541B;</li>
 <li>&#x9F8D;&#x967D;&#x541B;&#x4E3B;&#xFF1A;&#x885B;&#x9748;&#x516C;&#x3001;&#x9B4F;&#x5B89;&#x91D0;&#x738B;&#x3001;&#x5289;&#x90A6;&#x3001;&#x6F22;&#x60E0;&#x5E1D;&#x3001;&#x6F22;&#x6587;&#x5E1D;&#x3001;&#x6F22;&#x666F;&#x5E1D;&#x3001;&#x6F22;&#x6B66;&#x5E1D;&#x3001;&#x6F22;&#x6210;&#x5E1D;&#x3001;&#x6F22;&#x54C0;&#x5E1D;&#x3001;&#x66F9;&#x53E1;</li>
 <li>&#x53E3;&#x5403;&#xFF1A;&#x97D3;&#x975E;&#x3001;&#x5468;&#x660C;&#x3001;&#x53F8;&#x99AC;&#x76F8;&#x5982;&#x3001;&#x9127;&#x827E;&#x3001;&#x66F9;&#x53E1;</li>
@@ -317,7 +318,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x540D;&#x5EDA;&#xFF1A;&#x4F0A;&#x5C39;&#x3001;&#x6613;&#x7259;</li>
 <li>&#x72D7;&#x76E3;&#xFF1A;&#x694A;&#x5F97;&#x610F;</li>
 <li>&#x7267;&#x8C6C;&#xFF1A;&#x516C;&#x5B6B;&#x5F18;&#x3001;&#x5433;&#x7950;&#x3001;&#x516C;&#x6C99;&#x7A46;</li>
-<li>&#x5F3C;&#x99AC;&#x6EAB;&#xFF1A;&#x91D1;&#x65E5;&#x78FE;&#x3001;&#x674E;&#x5EF6;&#x5E74;&#x3001;&#x8607;&#x6B66;&#x3001;&#x4E0A;&#x5B98;&#x6840;&#x3001;&#x5085;&#x4ECB;&#x5B50;</li>
+<li>&#x5F3C;&#x99AC;&#x6EAB;&#xFF1A;&#x91D1;&#x65E5;&#x78FE;&#x3001;&#x674E;&#x5EF6;&#x5E74;&#x3001;&#x8607;&#x6B66;&#x3001;&#x4E0A;&#x5B98;&#x6840;&#x3001;&#x5085;&#x4ECB;&#x5B50;&#x3001;&#x6C72;&#x6851;</li>
 <li>&#x7267;&#x7F8A;&#xFF1A;&#x695A;&#x7FA9;&#x5E1D;&#x3001;&#x535C;&#x5F0F;&#x3001;&#x8DEF;&#x6EAB;&#x8212;&#x3001;&#x5289;&#x76C6;&#x5B50;</li>
 <li>&#x7267;&#x725B;&#xFF1A;&#x9127;&#x827E;</li>
 <li>&#x5C60;&#x592B;&#x51FA;&#x8EAB;&#xFF1A;&#x59DC;&#x5B50;&#x7259;&#x3001;&#x8076;&#x653F;&#x3001;&#x6A0A;&#x5672;&#x3001;&#x6731;&#x4EA5;&#x3001;&#x4F55;&#x9032;</li>
@@ -354,7 +355,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x4EC1;&#x7FA9;&#x4E4B;&#x5E2B;&#xFF1A;&#x8D99;&#x5145;&#x570B;&#x3001;&#x6F22;&#x5149;&#x6B66;&#x5E1D;</li>
 <li>&#x5947;&#x8469;&#x7235;&#x4F4D;&#xFF1A;&#x7FB9;&#x9821;&#x4FAF;&#x5289;&#x4FE1;&#x3001;&#x4E0D;&#x7FA9;&#x4FAF;&#x5B50;&#x5BC6;</li>
 <li>&#x5973;&#x53CD;&#x8CCA;&#xFF1A;&#x5442;&#x6BCD;&#x3001;&#x9072;&#x662D;&#x5E73;&#x3001;&#x5FB5;&#x5074;&#x3001;&#x5FB5;&#x8CB3;&#x3001;&#x9673;&#x78A9;&#x771F;</li>
-<li>&#x5973;&#x6230;&#x58EB;&#xFF1A;&#x7F85;&#x7687;&#x592A;&#x540E;</li>
+<li>&#x5973;&#x6230;&#x58EB;&#xFF1A;&#x5B6B;&#x592B;&#x4EBA;&#x3001;&#x7F85;&#x7687;&#x592A;&#x540E;&#x3001;&#x674E;&#x79C0;</li>
 <li>&#x5973;&#x667A;&#x8B00;&#x5BB6;&#xFF1A;&#x8F9B;&#x61B2;&#x82F1;&#x3001;&#x7FD2;&#x82F1;&#x7FD2;</li>
 <li>&#x8A93;&#x4E0D;&#x6539;&#x5AC1;&#xFF1A;&#x590F;&#x4FAF;&#x4EE4;&#x5973;</li>
 <li>&#x5973;&#x6B0A;&#x4E3B;&#x7FA9;&#x8005;&#x2236;&#x7A0B;&#x54B8;</li>
