--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -268,7 +268,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x62D2;&#x7D55;&#x7A31;&#x5E1D;&#x738B;&#xFF1A;&#x5B63;&#x672D;&#x3001;&#x516C;&#x5B50;&#x95AD;&#x3001;&#x5289;&#x865E;</li>
 <li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;&#x3001;&#x7530;&#x86A1;&#x3001;&#x66F9;&#x53E1;&#x3001;&#x53F8;&#x99AC;&#x708E;</li>
 <li>&#x70F9;&#x5B50;&#x98DF;&#x5B50;&#xFF1A;&#x6613;&#x7259;&#x3001;&#x6A02;&#x7F8A;</li>
-<li>&#x4EBA;&#x529B;&#x5927;&#x725B;&#xFF1A;&#x7FDF;&#x749C;&#x3001;&#x66B4;&#x52DD;&#x4E4B;&#x3001;&#x9127;&#x9A2D;&#x3001;&#x9673;&#x5FE0;&#x3001;&#x738B;&#x9F94;&#x3001;&#x66F9;&#x9A30;&#x3001;&#x8340;&#x5F67;&#x3001;&#x53F8;&#x99AC;&#x5FBD;&#x3001;&#x5C71;&#x6FE4;</li>
+<li>&#x4EBA;&#x529B;&#x5927;&#x725B;&#xFF1A;&#x7FDF;&#x749C;&#x3001;&#x66B4;&#x52DD;&#x4E4B;&#x3001;&#x9127;&#x9A2D;&#x3001;&#x9673;&#x5FE0;&#x3001;&#x738B;&#x9F94;&#x3001;&#x66F9;&#x9A30;&#x3001;&#x8340;&#x5F67;&#x3001;&#x53F8;&#x99AC;&#x5FBD;&#x3001;&#x5C71;&#x6FE4;&#x3001;&#x738B;&#x5C0E;</li>
 <li>&#x53AD;&#x52DD;&#x5236;&#x6575;&#xFF1A;&#x738B;&#x83BD;&#x3001;&#x53F8;&#x99AC;&#x502B;</li>
 <li>&#x611B;&#x5175;&#x5982;&#x5B50;&#xFF1A;&#x5433;&#x8D77;&#x3001;&#x674E;&#x5EE3;&#x3001;&#x885B;&#x9752;&#x3001;&#x796D;&#x9075;&#x3001;&#x6BB5;&#x71B2;&#x3001;&#x7687;&#x752B;&#x5D69;</li>
 <li>&#x8650;&#x5F85;&#x58EB;&#x5352;&#xFF1A;&#x970D;&#x53BB;&#x75C5;&#x3001;&#x674E;&#x5EE3;&#x5229;&#x3001;&#x5F35;&#x98DB;</li>
@@ -308,7 +308,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x820D;&#x8EAB;&#x70BA;&#x6C11;&#xFF1A;&#x9B4F;&#x548E;&#x3001;&#x5289;&#x748B;</li>
 <li>&#x5634;&#x8CE4;&#xFF1A;&#x97D3;&#x751F;&#x3001;&#x6817;&#x59EC;&#x3001;&#x5F4C;&#x8861;&#x3001;&#x694A;&#x4FEE;&#x3001;&#x9B4F;&#x660E;&#x5E1D;&#x865E;&#x5983;</li>
 <li>&#x7AD9;&#x932F;&#x968A;&#x7684;&#x667A;&#x8005;&#xFF1A;&#x674E;&#x5DE6;&#x8ECA;&#x3001;&#x9F8D;&#x4E14;&#x5BA2;&#x3001;&#x4F0D;&#x88AB;&#x3001;&#x71D5;&#x738B;&#x65E6;&#x76F8;&#x5E73;&#x3001;&#x56B4;&#x5C24;&#x3001;&#x7530;&#x8C50;&#x3001;&#x6CAE;&#x6388;&#x3001;&#x912D;&#x5EA6;&#x3001;&#x66F9;&#x723D;&#x53C3;&#x8ECD;&#x694A;&#x5049;&#x3001;&#x6853;&#x7BC4;</li>
-<li>&#x9577;&#x58FD;&#xFF1A;&#x8D99;&#x4F57;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4F0F;&#x751F;&#x3001;&#x8A31;&#x656C;&#x3001;&#x58EB;&#x71EE;&#x3001;&#x5F35;&#x81F6;&#x3001;&#x5442;&#x5CB1;&#x3001;&#x4F86;&#x654F;&#x3001;&#x62D3;&#x8DCB;&#x529B;&#x5FAE;&#x3001;&#x8303;&#x9577;&#x751F;</li>
+<li>&#x9577;&#x58FD;&#xFF1A;&#x8D99;&#x4F57;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4F0F;&#x751F;&#x3001;&#x8A31;&#x656C;&#x3001;&#x58EB;&#x71EE;&#x3001;&#x5F35;&#x81F6;&#x3001;&#x5442;&#x5CB1;&#x3001;&#x4F86;&#x654F;&#x3001;&#x62D3;&#x8DCB;&#x529B;&#x5FAE;&#x3001;&#x8303;&#x9577;&#x751F;&#x3001;&#x5289;&#x5BD4;</li>
 <li>&#x82E6;&#x903C;&#x4E00;&#x751F;&#xFF1A;&#x9148;&#x5BC4;&#x3001;&#x7533;&#x5C60;&#x5609;&#x3001;&#x5B5D;&#x7766;&#x7687;&#x540E;&#x3001;&#x99AE;&#x884D;&#x3001;&#x5442;&#x5B89;</li>
 <li>&#x4E8C;&#x5A5A;&#x7687;&#x540E;&#xFF1A;&#x8584;&#x59EC;&#x3001;&#x5B5D;&#x666F;&#x738B;&#x7687;&#x540E;&#x3001;&#x7504;&#x592B;&#x4EBA;&#x3001;&#x8700;&#x6F22;&#x5433;&#x7687;&#x540E;&#x3001;&#x7F8A;&#x737B;&#x5BB9;</li>
 <li>&#x919C;&#xFF1A;&#x695A;&#x7A46;&#x738B;&#x3001;&#x5B5F;&#x5617;&#x541B;&#x3001;&#x8521;&#x6FA4;&#x3001;&#x7530;&#x86A1;&#x3001;&#x5468;&#x8209;&#x3001;&#x5468;&#x71EE;&#x3001;&#x6881;&#x80E4;&#x3001;&#x7BA1;&#x8F05;</li>
@@ -332,6 +332,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x5ABD;&#x5BF6;&#xFF1A;&#x5171;&#x53D4;&#x6BB5;&#x3001;&#x6881;&#x738B;&#x5289;&#x6B66;&#x3001;&#x662D;&#x5E73;&#x541B;</li>
 <li>&#x7238;&#x5BF6;&#xFF1A;&#x5DDE;&#x5401;</li>
 <li>&#x5C04;&#x5929;&#x7F75;&#x5929;&#xFF1A;&#x6B66;&#x4E59;&#x3001;&#x7D02;&#x3001;&#x5B8B;&#x5EB7;&#x738B;&#x3001;&#x4E0A;&#x5B98;&#x5B89;</li>
+<li>&#x552F;&#x6050;&#x5929;&#x4E0B;&#x4E0D;&#x4E82;&#xFF1A;&#x6F22;&#x8D99;&#x5289;&#x9748;</li>
 <li>&#x611B;&#x6253;&#x5C0F;&#x5831;&#x544A;&#xFF1A;&#x606F;&#x592B;&#x8EAC;&#x3001;&#x5EC9;&#x662D;</li>
 <li>&#x88F8;&#x5954;&#x611B;&#x597D;&#x8005;&#xFF1A;&#x6851;&#x6248;&#x3001;&#x4E0A;&#x5B98;&#x5B89;&#x3001;&#x5289;&#x4F36;</li>
 <li>&#x98C6;&#x8ECA;&#x611B;&#x597D;&#x8005;&#xFF1A;&#x5289;&#x8CC0;</li>
