--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -357,7 +357,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x4EC1;&#x7FA9;&#x4E4B;&#x5E2B;&#xFF1A;&#x8D99;&#x5145;&#x570B;&#x3001;&#x6F22;&#x5149;&#x6B66;&#x5E1D;</li>
 <li>&#x5947;&#x8469;&#x7235;&#x4F4D;&#xFF1A;&#x7FB9;&#x9821;&#x4FAF;&#x5289;&#x4FE1;&#x3001;&#x4E0D;&#x7FA9;&#x4FAF;&#x5B50;&#x5BC6;</li>
 <li>&#x5973;&#x53CD;&#x8CCA;&#xFF1A;&#x5442;&#x6BCD;&#x3001;&#x9072;&#x662D;&#x5E73;&#x3001;&#x5FB5;&#x5074;&#x3001;&#x5FB5;&#x8CB3;&#x3001;&#x9673;&#x78A9;&#x771F;</li>
-<li>&#x5973;&#x6230;&#x58EB;&#xFF1A;&#x5B6B;&#x592B;&#x4EBA;&#x3001;&#x7F85;&#x7687;&#x592A;&#x540E;&#x3001;&#x674E;&#x79C0;</li>
+<li>&#x5973;&#x6230;&#x58EB;&#xFF1A;&#x5B6B;&#x592B;&#x4EBA;&#x3001;&#x7F85;&#x7687;&#x592A;&#x540E;&#x3001;&#x674E;&#x79C0;&#x3001;&#x8340;&#x704C;</li>
 <li>&#x5973;&#x667A;&#x8B00;&#x5BB6;&#xFF1A;&#x8F9B;&#x61B2;&#x82F1;&#x3001;&#x7FD2;&#x82F1;&#x7FD2;</li>
 <li>&#x8A93;&#x4E0D;&#x6539;&#x5AC1;&#xFF1A;&#x590F;&#x4FAF;&#x4EE4;&#x5973;</li>
 <li>&#x5973;&#x6B0A;&#x4E3B;&#x7FA9;&#x8005;&#x2236;&#x7A0B;&#x54B8;</li>
