--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -297,7 +297,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x6473;&#x9580;&#xFF1A;&#x6A0A;&#x4F37;&#x3001;&#x66F9;&#x6D2A;&#x3001;&#x53F8;&#x99AC;&#x9A30;</li>
 <li>&#x7D66;&#x541B;&#x4E3B;&#x737B;&#x5B55;&#x5A66;&#xFF1A;&#x5442;&#x4E0D;&#x97CB;&#x3001;&#x6625;&#x7533;&#x541B;</li>
 <li>&#x9F8D;&#x967D;&#x541B;&#x4E3B;&#xFF1A;&#x885B;&#x9748;&#x516C;&#x3001;&#x9B4F;&#x5B89;&#x91D0;&#x738B;&#x3001;&#x5289;&#x90A6;&#x3001;&#x6F22;&#x60E0;&#x5E1D;&#x3001;&#x6F22;&#x6587;&#x5E1D;&#x3001;&#x6F22;&#x666F;&#x5E1D;&#x3001;&#x6F22;&#x6B66;&#x5E1D;&#x3001;&#x6F22;&#x6210;&#x5E1D;&#x3001;&#x6F22;&#x54C0;&#x5E1D;&#x3001;&#x66F9;&#x53E1;</li>
-<li>&#x53E3;&#x5403;&#xFF1A;&#x97D3;&#x975E;&#x3001;&#x5468;&#x660C;&#x3001;&#x53F8;&#x99AC;&#x76F8;&#x5982;&#x3001;&#x9127;&#x827E;&#x3001;&#x66F9;&#x53E1;</li>
+<li>&#x53E3;&#x5403;&#xFF1A;&#x97D3;&#x975E;&#x3001;&#x5468;&#x660C;&#x3001;&#x53F8;&#x99AC;&#x76F8;&#x5982;&#x3001;&#x63DA;&#x96C4;&#x3001;&#x9127;&#x827E;&#x3001;&#x66F9;&#x53E1;&#x3001;&#x99AC;&#x921E;</li>
 <li>&#x72D0;&#x81ED;&#xFF1A;&#x695A;&#x61F7;&#x738B;</li>
 <li>&#x6D88;&#x6E34;(&#x7CD6;&#x5C3F;&#x75C5;)&#xFF1A;&#x53F8;&#x99AC;&#x76F8;&#x5982;</li>
 <li>&#x7FB8;&#x7635;(&#x80BA;&#x7D50;&#x6838;)&#xFF1A;&#x8CC0;&#x5FAA;</li>
@@ -353,6 +353,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x9AD8;&#x983B;&#x7387;&#x72AF;&#x7F6A;&#xFF1A;&#x5289;&#x8CC0;&#x3001;&#x5289;&#x7ACB;</li>
 <li>&#x80CC;&#x934B;&#x4FE0;&#xFF1A;&#x590F;&#x4FAF;&#x85E9;&#x3001;&#x9B6F;&#x5321;&#x3001;&#x6210;&#x6FDF;&#x3001;&#x99AE;&#x6590;&#x3001;&#x90B5;&#x7587;</li>
 <li>&#x6BBA;&#x5B50;&#xFF1A;&#x77F3;&#x788F;&#x3001;&#x91D1;&#x65E5;&#x78FE;&#x3001;&#x6F22;&#x6210;&#x5E1D;&#x3001;&#x738B;&#x7ACB;&#x3001;&#x738B;&#x83BD;</li>
+<li>&#x6BBA;&#x5144;&#x5165;&#x5AC2;&#xFF1A;&#x9F4A;&#x6853;&#x516C;&#x3001;&#x674E;&#x4E16;&#x6C11;</li>
 <li>&#x72D7;&#x5C4E;&#x904B;&#xFF1A;&#x738B;&#x8208;&#x3001;&#x738B;&#x76DB;&#x3001;&#x9EC3;&#x8007;&#x3001;&#x5433;&#x5E73;</li>
 <li>&#x4EC1;&#x7FA9;&#x4E4B;&#x5E2B;&#xFF1A;&#x8D99;&#x5145;&#x570B;&#x3001;&#x6F22;&#x5149;&#x6B66;&#x5E1D;</li>
 <li>&#x5947;&#x8469;&#x7235;&#x4F4D;&#xFF1A;&#x7FB9;&#x9821;&#x4FAF;&#x5289;&#x4FE1;&#x3001;&#x4E0D;&#x7FA9;&#x4FAF;&#x5B50;&#x5BC6;</li>
@@ -396,7 +397,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x6B12;&#x5DF4;&#xFF1A;&#x51C8;&#x8EAB;&#x4E0D;&#x5FB9;&#x5E95;&#x7684;&#x5BA6;&#x5B98;&#xFF0C;&#x5A36;&#x59BB;&#x751F;&#x5B50;&#xFF0C;&#x540D;&#x5217;&#x516B;&#x4F7F;</li>
 <li>&#x4E09;&#x59D3;&#x7687;&#x540E;&#xFF1A;&#x9127;&#x731B;&#x5973;</li>
 <li>&#x6E1B;&#x80A5;&#x56F0;&#x96E3;&#xFF1A;&#x738B;&#x620E;&#x5B50;&#x738B;&#x7D8F;<code>&#x6709;&#x7F8E;&#x53F7;&#x800C;&#x592A;&#x80A5;&#xFF0C;&#x620E;&#x4EE4;&#x98DF;&#x7CE0;&#xFF0C;&#x800C;&#x80A5;&#x6108;&#x751A;&#x4E5F;&#x3002;</code></li>
-<li>&#x5B5D;&#x611F;&#x52D5;&#x5929;&#x8207;&#x7956;&#x5DF1;&#x6D41;&#x653E;&#xFF1B;&#x57CB;&#x5152;&#x5949;&#x6BCD;&#x8207;&#x6962;&#x5C71;&#x7BC0;&#x8003;&#xFF1B;&#x81E5;&#x51B0;&#x6C42;&#x9BC9;&#x8207;&#x8340;&#x4EE4;&#x50B7;&#x795E;&#xFF1B;&#x54ED;&#x7AF9;&#x751F;&#x7B4D;&#x8207;&#x5B50;&#x590F;&#x5931;&#x660E;&#xFF1B;&#x627C;&#x864E;&#x6551;&#x7236;&#x8207;&#x674E;&#x9035;&#x80CC;&#x6BCD;&#xFF1B;&#x4E73;&#x59D1;&#x4E0D;&#x6020;&#x8207;&#x5F35;&#x84BC;&#x559D;&#x5976;</li>
+<li>&#x5B5D;&#x611F;&#x52D5;&#x5929;&#x8207;&#x7956;&#x5DF1;&#x6D41;&#x653E;&#x66FE;&#x5B50;&#x6328;&#x6253;&#xFF1B;&#x81E5;&#x51B0;&#x6C42;&#x9BC9;&#x8207;&#x8340;&#x4EE4;&#x50B7;&#x795E;&#xFF1B;&#x54ED;&#x7AF9;&#x751F;&#x7B4D;&#x8207;&#x5B50;&#x590F;&#x5931;&#x660E;&#xFF1B;&#x627C;&#x864E;&#x6551;&#x7236;&#x8207;&#x674E;&#x9035;&#x80CC;&#x6BCD;&#xFF1B;&#x4E73;&#x59D1;&#x4E0D;&#x6020;&#x8207;&#x5F35;&#x84BC;&#x559D;&#x5976;</li>
 </ul>
 
       </div>
