更新卷90人物
Former-commit-id: 60d82cddd1d64697f181421d2aa1def29036bfeb

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -311,7 +311,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x7AD9;&#x932F;&#x968A;&#x7684;&#x667A;&#x8005;&#xFF1A;&#x674E;&#x5DE6;&#x8ECA;&#x3001;&#x9F8D;&#x4E14;&#x5BA2;&#x3001;&#x4F0D;&#x88AB;&#x3001;&#x71D5;&#x738B;&#x65E6;&#x76F8;&#x5E73;&#x3001;&#x56B4;&#x5C24;&#x3001;&#x7530;&#x8C50;&#x3001;&#x6CAE;&#x6388;&#x3001;&#x912D;&#x5EA6;&#x3001;&#x66F9;&#x723D;&#x53C3;&#x8ECD;&#x694A;&#x5049;&#x3001;&#x6853;&#x7BC4;</li>
 <li>&#x9577;&#x58FD;&#xFF1A;&#x8D99;&#x4F57;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4F0F;&#x751F;&#x3001;&#x8A31;&#x656C;&#x3001;&#x58EB;&#x71EE;&#x3001;&#x9AD8;&#x67D4;&#x3001;&#x5F35;&#x81F6;&#x3001;&#x5442;&#x5CB1;&#x3001;&#x4F86;&#x654F;&#x3001;&#x62D3;&#x8DCB;&#x529B;&#x5FAE;&#x3001;&#x8303;&#x9577;&#x751F;&#x3001;&#x5289;&#x5BD4;</li>
 <li>&#x82E6;&#x903C;&#x4E00;&#x751F;&#xFF1A;&#x9148;&#x5BC4;&#x3001;&#x7533;&#x5C60;&#x5609;&#x3001;&#x5B5D;&#x7766;&#x7687;&#x540E;&#x3001;&#x99AE;&#x884D;&#x3001;&#x5442;&#x5B89;</li>
-<li>&#x4E8C;&#x5A5A;&#x7687;&#x540E;&#xFF1A;&#x8584;&#x59EC;&#x3001;&#x5B5D;&#x666F;&#x738B;&#x7687;&#x540E;&#x3001;&#x7504;&#x592B;&#x4EBA;&#x3001;&#x8700;&#x6F22;&#x5433;&#x7687;&#x540E;&#x3001;&#x7F8A;&#x737B;&#x5BB9;&#x3001;&#x5289;&#x8070;&#x5C0F;&#x5289;&#x8CB4;&#x4EBA;</li>
+<li>&#x4E8C;&#x5A5A;&#x7687;&#x540E;&#xFF1A;&#x8584;&#x59EC;&#x3001;&#x5B5D;&#x666F;&#x738B;&#x7687;&#x540E;&#x3001;&#x7504;&#x592B;&#x4EBA;&#x3001;&#x8700;&#x6F22;&#x5433;&#x7687;&#x540E;&#x3001;&#x7F8A;&#x737B;&#x5BB9;&#x3001;&#x5289;&#x8070;&#x5C0F;&#x5289;&#x8CB4;&#x4EBA;&#x3001;&#x912D;&#x963F;&#x6625;</li>
 <li>&#x919C;&#xFF1A;&#x695A;&#x7A46;&#x738B;&#x3001;&#x5B5F;&#x5617;&#x541B;&#x3001;&#x8521;&#x6FA4;&#x3001;&#x7530;&#x86A1;&#x3001;&#x5468;&#x8209;&#x3001;&#x5468;&#x71EE;&#x3001;&#x6881;&#x80E4;&#x3001;&#x7BA1;&#x8F05;</li>
 <li>&#x77EC;&#xFF1A;&#x5468;&#x8209;&#x3001;&#x5F35;&#x677E;&#x3001;&#x6731;&#x7136;&#x3001;&#x5B8B;&#x914D;</li>
 <li>&#x91CE;&#x7378;&#x640F;&#x9B25;&#x8005;&#xFF1A;&#x8F45;&#x56FA;&#x3001;&#x8CC8;&#x592B;&#x4EBA;&#x3001;&#x99AE;&#x5A55;&#x59A4;&#x3001;&#x5B6B;&#x79AE;&#x3001;&#x694A;&#x9999;</li>
@@ -379,7 +379,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x6975;&#x9650;&#x9003;&#x751F;&#xFF1A;&#x8D99;&#x6B66;&#x3001;&#x8607;&#x6B66;&#x3001;&#x675C;&#x6839;&#x3001;&#x7B2C;&#x4E94;&#x7A2E;&#x3001;&#x674E;&#x71EE;&#x3001;&#x8D99;&#x5C90;&#x3001;&#x5F35;&#x5109;</li>
 <li>&#x8650;&#x5F92;&#x4E8B;&#x4EF6;&#xFF1A;&#x9EC3;&#x77F3;&#x516C;+&#x5F35;&#x826F;&#x3001;&#x90ED;&#x6CF0;+&#x9B4F;&#x662D;</li>
 <li>&#x6613;&#x8207;&#x8033;&#xFF1A;&#x5287;&#x8F9B;+&#x9F90;&#x7156;&#x3001;&#x9F8D;&#x4E14;+&#x97D3;&#x4FE1;&#x3001;&#x674E;&#x5EE3;+&#x80E1;&#x865C;&#x3001;&#x590F;&#x4FAF;&#x6DF5;+&#x97D3;&#x9042;</li>
-<li>&#x76F8;&#x611B;&#x76F8;&#x6BBA;&#xFF1A;&#x5F35;&#x8033;+&#x9673;&#x9918;&#x3001;&#x5B6B;&#x6B0A;+&#x5F35;&#x662D;&#x3001;&#x53F8;&#x99AC;&#x9852;+&#x5289;&#x6C88;&#x3001;&#x5289;&#x8070;+&#x5289;&#x4E42;</li>
+<li>&#x76F8;&#x611B;&#x76F8;&#x6BBA;&#xFF1A;&#x5F35;&#x8033;+&#x9673;&#x9918;&#x3001;&#x5B6B;&#x6B0A;+&#x5F35;&#x662D;&#x3001;&#x53F8;&#x99AC;&#x9852;+&#x5289;&#x6C88;&#x3001;&#x5289;&#x8070;+&#x5289;&#x4E42;&#x3001;&#x5289;&#x7428;+&#x6BB5;&#x5339;&#x78FE;</li>
 <li>&#x81EA;&#x7BC9;&#x5C0F;&#x5C4B;&#xFF1A;&#x8881;&#x958E;&#x3001;&#x7533;&#x5C60;&#x87E0;</li>
 <li>&#x5546;&#x754C;&#x7CBE;&#x82F1;&#xFF1A;&#x5442;&#x4E0D;&#x97CB;&#x3001;&#x5B5F;&#x4F57;</li>
 <li>&#x88AB;&#x59E6;&#x5C38;&#xFF1A;&#x5442;&#x540E;&#x3001;&#x6F22;&#x6853;&#x5E1D;&#x99AE;&#x8CB4;&#x4EBA;</li>
