完成卷91人物
Former-commit-id: 3ff259b6035d3577fcf3b75582262fe9743268ca

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -305,7 +305,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x58C1;&#x4E2D;&#x85CF;&#x66F8;&#xFF1A;&#x5B54;&#x9B92;&#x3001;&#x4F0F;&#x751F;&#x3001;&#x9673;&#x5BF5;&#x66FE;&#x7956;&#x9673;&#x54B8;</li>
 <li>&#x58C1;&#x4E2D;&#x85CF;&#x4EBA;&#xFF1A;&#x6881;&#x4F2F;&#x7389;&#x3001;&#x8D99;&#x6B67;&#x3001;&#x8881;&#x958E;&#x3001;&#x4F0F;&#x7687;&#x540E;</li>
 <li>&#x76F8;&#x9762;&#x5927;&#x5E2B;&#xFF1A;&#x5442;&#x516C;&#x3001;&#x5289;&#x90A6;&#x3001;&#x8A31;&#x8CA0;&#x3001;&#x5510;&#x8209;&#x3001;&#x6731;&#x5EFA;&#x5E73;&#x3001;&#x7BA1;&#x8F05;</li>
-<li>&#x611F;&#x52D5;&#x4E2D;&#x570B;&#x597D;&#x5B98;&#xFF1A;&#x535C;&#x5F0F;&#x3001;&#x5152;&#x5BEC;&#x3001;&#x8D99;&#x5EE3;&#x6F22;&#x3001;&#x97D3;&#x5EF6;&#x58FD;&#x3001;&#x53EC;&#x4FE1;&#x81E3;&#x3001;&#x56B4;&#x8A61;&#x3001;&#x5353;&#x8302;&#x3001;&#x675C;&#x8A69;&#x3001;&#x5BC7;&#x6042;&#x3001;&#x5F35;&#x582A;&#x3001;&#x5EC9;&#x8303;&#x3001;&#x5289;&#x5BF5;&#x3001;&#x8CC8;&#x9035;&#x3001;&#x8AF8;&#x845B;&#x4EAE;</li>
+<li>&#x611F;&#x52D5;&#x4E2D;&#x570B;&#x597D;&#x5B98;&#xFF1A;&#x535C;&#x5F0F;&#x3001;&#x5152;&#x5BEC;&#x3001;&#x8D99;&#x5EE3;&#x6F22;&#x3001;&#x97D3;&#x5EF6;&#x58FD;&#x3001;&#x53EC;&#x4FE1;&#x81E3;&#x3001;&#x56B4;&#x8A61;&#x3001;&#x5353;&#x8302;&#x3001;&#x675C;&#x8A69;&#x3001;&#x5BC7;&#x6042;&#x3001;&#x5F35;&#x582A;&#x3001;&#x5EC9;&#x8303;&#x3001;&#x5289;&#x5BF5;&#x3001;&#x8CC8;&#x9035;&#x3001;&#x8AF8;&#x845B;&#x4EAE;&#x3001;&#x7956;&#x9016;</li>
 <li>&#x820D;&#x8EAB;&#x70BA;&#x6C11;&#xFF1A;&#x9B4F;&#x548E;&#x3001;&#x5289;&#x748B;</li>
 <li>&#x53CD;&#x6230;&#x70BA;&#x6C11;&#xFF1A;&#x97A0;&#x5F6D;</li>
 <li>&#x5634;&#x8CE4;&#xFF1A;&#x97D3;&#x751F;&#x3001;&#x6817;&#x59EC;&#x3001;&#x5F4C;&#x8861;&#x3001;&#x694A;&#x4FEE;&#x3001;&#x9B4F;&#x660E;&#x5E1D;&#x865E;&#x5983;</li>
@@ -329,6 +329,8 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x523B;&#x82E6;&#x8B80;&#x66F8;&#xFF1A;&#x6731;&#x8CB7;&#x81E3;&#x3001;&#x5152;&#x5BEC;&#x3001;&#x8DEF;&#x6EAB;&#x8212;&#x3001;&#x5321;&#x8861;</li>
 <li>&#x795E;&#x7AE5;&#xFF1A;&#x9805;&#x6A50;&#x3001;&#x7518;&#x7F85;&#x3001;&#x5B54;&#x878D;&#x3001;&#x66F9;&#x6C96;&#x3001;&#x5468;&#x4E0D;&#x7591;</li>
 <li>&#x5E38;&#x6557;&#x5C07;&#x8ECD;&#xFF1A;&#x674E;&#x5EE3;&#x3001;&#x674E;&#x5EE3;&#x5229;&#x3001;&#x9127;&#x79B9;&#x3001;&#x590F;&#x4FAF;&#x60C7;&#x3001;&#x9EC3;&#x7956;&#x3001;&#x738B;&#x7384;&#x8B28;&#x3001;&#x674E;&#x666F;&#x9686;</li>
+<li>&#x53CD;&#x5FA9;&#x6416;&#x64FA;&#xFF1A;&#x5F90;&#x9F95;</li>
+<li>&#x6B7B;&#x524D;&#x66B4;&#x64CA;&#xFF1A;&#x9805;&#x7FBD;&#x3001;&#x6BB5;&#x6587;&#x9D26;</li>
 <li>&#x5F37;&#x529B;&#x523A;&#x5BA2;&#xFF1A;&#x516C;&#x5B6B;&#x8FF0;&#x3001;&#x4EFB;&#x5C1A;</li>
 <li>&#x6F22;&#x5978;&#xFF1A;&#x4E2D;&#x884C;&#x8AAC;&#x3001;&#x8D99;&#x4FE1;&#x3001;&#x885B;&#x5F8B;&#x3001;&#x76E7;&#x82B3;&#x3001;&#x6F22;&#x5978;&#x97D3;&#x742E;</li>
 <li>&#x5ABD;&#x5BF6;&#xFF1A;&#x5171;&#x53D4;&#x6BB5;&#x3001;&#x6881;&#x738B;&#x5289;&#x6B66;&#x3001;&#x662D;&#x5E73;&#x541B;</li>
